[package]
name = "hibou_label"
version = "0.6.5"
authors = ["Erwan Mahe"]
edition = "2018"

license = "Apache-2.0"
description = "Holistic Interaction Behavioral Oracle Utility - hibou provides utilities for the analysis of traces and multi-traces of interaction models"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"                               # for rendering interactions
imageproc = "0.22.0"                            # ...
strum = "0.23.0"                                # for as_static in the graphviz package and others
strum_macros = "0.23.1"                         # ...
rusttype = "0.9.2"                              # for fonts and scale for text in images
pest = "2.1.3"                                  # for pest parser
pest_derive = "2.1.0"                           # ...
clap = {version="3.0.6",features=["yaml"]}     # for the command line interface