[package]
name = "hibou_label"
version = "0.8.7"
authors = ["Erwan Mahe"]
edition = "2021"

license = "Apache-2.0"
description = "Holistic Interaction Behavioral Oracle Utility - hibou provides utilities for the analysis of traces and multi-traces of interaction models"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"                                # for rendering interactions
imageproc = "0.23.0"                            # ...
image_colored_text = "0.1.2"                    # for drawing colored text
rusttype = "0.9.3"                              # for fonts and scale for text in images
pest = "2.5.6"                                  # for pest parser
pest_derive = "2.5.6"                           # ...
clap = {version="3.2.22",features=["yaml"]}     # for the command line interface
maplit = "1.0.2"                                # for !hashset macro etc
itertools = "0.10.5"                            # for .sorted() etc
rand = "0.8.5"                                  # random number generation e.g. for traversal heuristics for interaction semantics exploration and/or multitrace analysis
graphviz_dot_builder = "0.1.2"                  # for generating dot files to be used with graphviz
graph_process_manager_core = "0.1.10"            #
graph_process_manager_loggers = "0.1.14"         #
autour_core = "0.1.10"
autour_process = "0.1.6"
strum = "0.24.1"                                # for IntoStaticStr
strum_macros = "0.24.3"                         # ...